--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       
       - name: Sync and merge upstream repository with your current repository
-        uses: dabreadman/sync-upstream-repo@v1.3.0
+        uses: dabreadman/sync-upstream-repo@v1.0.0.b
         with:
           # URL of gitHub public upstream repo
           upstream_repo: https://github.com/AU-DIS/dm2023-exercises
@@ -26,3 +26,6 @@ jobs:
 
           # GitHub Bot token
           token: ${{ secrets.GITHUB_TOKEN }}
+          
+          
+          
