--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,7 +16,7 @@ jobs:
         uses: dabreadman/sync-upstream-repo@v1.0.0.b
         with:
           # URL of gitHub public upstream repo
-          upstream_repo: https://github.com/AU-DIS/dm2023-exercises
+          upstream_repo: https://github.com/AU-DIS/dm2023-exercises.git
 
           # Branch to merge from upstream (defaults to downstream branch)
           upstream_branch: main
