--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,26 +6,55 @@ on:
   - cron: "0 13 * * 1"
   
 jobs:
-  sync:
+  merge:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
+      - name: Merge upstream
+        run: |
+          git config --global user.name 'andreastind'
+          git config --global user.email 'andreastind@users.noreply.github.com'
+          
+          # "git checkout main" is unnecessary, already here by default
+          git pull --unshallow  # this option is very important, you would get
+                                # complains about unrelated histories without it.
+                                # (but actions/checkout@v2 can also be unstructed
+                                # to fetch all git depth right from the start)
+          git remote add upstream https://github.com/AU-DIS/dm2023-exercises.git
+          git fetch upstream
+          
+          # Neither forget the -b opt,
+          # the feature/x ref is ambiguous at this stage
+          git checkout -b feature/x origin/feature/x
+          git merge --no-edit upstream/feature/x
+          git push origin feature/x
+          
+          git checkout main
+          git merge --no-edit upstream/main
+          git push origin main
+
+
+#jobs:
+#  sync:
+#    runs-on: ubuntu-latest
+
+#    steps:
+#      - uses: actions/checkout@v2
       
-      - name: Sync and merge upstream repository with your current repository
-        uses: dabreadman/sync-upstream-repo@v1.0.0.b
-        with:
+#      - name: Sync and merge upstream repository with your current repository
+#        uses: dabreadman/sync-upstream-repo@v1.0.0.b
+#        with:
           # URL of gitHub public upstream repo
-          upstream_repo: https://github.com/AU-DIS/dm2023-exercises.git
+#          upstream_repo: https://github.com/AU-DIS/dm2023-exercises.git
 
           # Branch to merge from upstream (defaults to downstream branch)
-          upstream_branch: main
+#          upstream_branch: main
 
           # Branch to merge into downstream
-          downstream_branch: main 
+#          downstream_branch: main 
 
           # GitHub Bot token
-          token: ${{ secrets.GITHUB_TOKEN }}
+#          token: ${{ secrets.GITHUB_TOKEN }}
           
           
           
