--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with: ${{ secrets.GITHUB_TOKEN }}
       - name: Merge upstream
         run: |
           git config --global user.name 'andreastind'
@@ -32,7 +33,6 @@ jobs:
           git checkout main
           git merge --no-edit upstream/main
           git push origin main
-
 
 #jobs:
 #  sync:
