--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,35 +25,10 @@ jobs:
           
           # Neither forget the -b opt,
           # the feature/x ref is ambiguous at this stage
-          #git checkout -b main origin/main
-          #git merge --no-edit upstream/main
-          #git push origin main
+          #git checkout -b feature/x origin/feature/x
+          #git merge --no-edit upstream/feature/x
+          #git push origin feature/x
           
           git checkout main
           git merge --no-edit upstream/main
           git push origin main
-
-#jobs:
-#  sync:
-#    runs-on: ubuntu-latest
-
-#    steps:
-#      - uses: actions/checkout@v2
-      
-#      - name: Sync and merge upstream repository with your current repository
-#        uses: dabreadman/sync-upstream-repo@v1.0.0.b
-#        with:
-          # URL of gitHub public upstream repo
-#          upstream_repo: https://github.com/AU-DIS/dm2023-exercises.git
-
-          # Branch to merge from upstream (defaults to downstream branch)
-#          upstream_branch: main
-
-          # Branch to merge into downstream
-#          downstream_branch: main 
-
-          # GitHub Bot token
-#          token: ${{ secrets.GITHUB_TOKEN }}
-          
-          
-          
