--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -3,7 +3,8 @@ name: Sync Fork
 on:
   workflow_dispatch:
   schedule: 
-  - cron: "0 13 * * 1"
+  # mm HH DD MM DW
+  - cron: "0 13 * * *"
   
 jobs:
   merge:
